{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 162,
  "lineage": "32010273-8aa9-aa2d-ba8a-db486885f656",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6d482d625c39571",
            "domain": "vpc",
            "id": "eipalloc-0b6d482d625c39571",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-52-13-181-66.us-west-2.compute.amazonaws.com",
            "public_ip": "52.13.181.66",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tf_eip"
            },
            "tags_all": {
              "Name": "tf_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08d70e59c07c61a3a",
            "arn": "arn:aws:ec2:us-west-2:667757478024:instance/i-01a0c31630074572f",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01a0c31630074572f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0f920a30b3c4b5eb0"
              }
            ],
            "primary_network_interface_id": "eni-0f920a30b3c4b5eb0",
            "private_dns": "ip-10-0-2-154.us-west-2.compute.internal",
            "private_ip": "10.0.2.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0445a3e6c28ed5e7a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00ebb34490a17fc56",
            "tags": {
              "Name": "private_instance"
            },
            "tags_all": {
              "Name": "private_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09297e3d07cc51fde"
            ]
          },
          "dependencies": [
            "aws_network_interface.private",
            "aws_security_group.sg",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08d70e59c07c61a3a",
            "arn": "arn:aws:ec2:us-west-2:667757478024:instance/i-088b8799a72a45300",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-088b8799a72a45300",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0263d4039ff347aba"
              }
            ],
            "primary_network_interface_id": "eni-0263d4039ff347aba",
            "private_dns": "ip-10-0-1-71.us-west-2.compute.internal",
            "private_ip": "10.0.1.71",
            "public_ip": "52.10.85.223",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-099fadfba0a230c72",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06476a940c972f4ca",
            "tags": {
              "Name": "public_instance"
            },
            "tags_all": {
              "Name": "public_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09297e3d07cc51fde"
            ]
          },
          "dependencies": [
            "aws_network_interface.public",
            "aws_security_group.sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:667757478024:internet-gateway/igw-09825bf6050f7dd4a",
            "id": "igw-09825bf6050f7dd4a",
            "owner_id": "667757478024",
            "tags": {
              "Name": "tf_gw"
            },
            "tags_all": {
              "Name": "tf_gw"
            },
            "vpc_id": "vpc-08ce7b8bdf8430acc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6d482d625c39571",
            "connectivity_type": "public",
            "id": "nat-0f0eb9d6c1ca6da41",
            "network_interface_id": "eni-08eaf2d3fcf6e2050",
            "private_ip": "10.0.1.84",
            "public_ip": "52.13.181.66",
            "subnet_id": "subnet-06476a940c972f4ca",
            "tags": {
              "Name": "ef_gw_NAT"
            },
            "tags_all": {
              "Name": "ef_gw_NAT"
            }
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:667757478024:network-interface/eni-0f920a30b3c4b5eb0",
            "id": "eni-0f920a30b3c4b5eb0",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:09:16:75:82:db",
            "owner_id": "667757478024",
            "private_ip": "10.0.2.154",
            "private_ip_list": [
              "10.0.2.154"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.2.154"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-09297e3d07cc51fde"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00ebb34490a17fc56",
            "tags": {
              "Name": "tf_private_network_interface"
            },
            "tags_all": {
              "Name": "tf_private_network_interface"
            }
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:667757478024:network-interface/eni-0263d4039ff347aba",
            "id": "eni-0263d4039ff347aba",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:ab:bf:d4:70:cd",
            "owner_id": "667757478024",
            "private_ip": "10.0.1.71",
            "private_ip_list": [
              "10.0.1.71"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.71"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-09297e3d07cc51fde"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06476a940c972f4ca",
            "tags": {
              "Name": "tf_public_network_interface"
            },
            "tags_all": {
              "Name": "tf_public_network_interface"
            }
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b70bf2976fa9f6b31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f0eb9d6c1ca6da41",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b70bf2976fa9f6b3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.ngw",
            "aws_route_table.private_rt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09825bf6050f7dd4a",
            "id": "r-rtb-005be5ed9ef1f38141080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-005be5ed9ef1f3814",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rt",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:667757478024:route-table/rtb-0b70bf2976fa9f6b3",
            "id": "rtb-0b70bf2976fa9f6b3",
            "owner_id": "667757478024",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tf_private_rt"
            },
            "tags_all": {
              "Name": "tf_private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ce7b8bdf8430acc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:667757478024:route-table/rtb-005be5ed9ef1f3814",
            "id": "rtb-005be5ed9ef1f3814",
            "owner_id": "667757478024",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tf_public_rt"
            },
            "tags_all": {
              "Name": "tf_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ce7b8bdf8430acc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c5a0026ae0a9546",
            "route_table_id": "rtb-0b70bf2976fa9f6b3",
            "subnet_id": "subnet-00ebb34490a17fc56"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078b61aab561c8656",
            "route_table_id": "rtb-005be5ed9ef1f3814",
            "subnet_id": "subnet-06476a940c972f4ca"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:667757478024:security-group/sg-09297e3d07cc51fde",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09297e3d07cc51fde",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "worldwide",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "worldwide",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220131124538280900000001",
            "name_prefix": "terraform-",
            "owner_id": "667757478024",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08ce7b8bdf8430acc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:667757478024:subnet/subnet-00ebb34490a17fc56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ebb34490a17fc56",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667757478024",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf_subnet_private"
            },
            "tags_all": {
              "Name": "tf_subnet_private"
            },
            "vpc_id": "vpc-08ce7b8bdf8430acc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:667757478024:subnet/subnet-06476a940c972f4ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06476a940c972f4ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "667757478024",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf_subnet_public"
            },
            "tags_all": {
              "Name": "tf_subnet_public"
            },
            "vpc_id": "vpc-08ce7b8bdf8430acc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:667757478024:vpc/vpc-08ce7b8bdf8430acc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-060b19618c9e181f5",
            "default_route_table_id": "rtb-0b7ff889094275af1",
            "default_security_group_id": "sg-03028eb294b917bdd",
            "dhcp_options_id": "dopt-7f6f751d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08ce7b8bdf8430acc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b7ff889094275af1",
            "owner_id": "667757478024",
            "tags": {
              "Name": "tf_vpc"
            },
            "tags_all": {
              "Name": "tf_vpc"
            }
          }
        }
      ]
    }
  ]
}